Fixed mobile menu button visibility issue & redirect to cmpute.io for join

--- a/css/main.css
+++ b/css/main.css
@@ -12240,6 +12240,10 @@ header .logo-nav-white {
      padding-top: 46px;
  }
 
+ .announcement-padding .mobile-menu{
+     top: 65px;
+ }
+
  .announcement {
  margin: 0;
  padding: 5px;
